--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=e5ed2884011dce1d2f1c88a3d9528745
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:12345678@127.0.0.1:3306/urps
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
