--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,9 +3,26 @@ vich_uploader:
 
     mappings:
         content_game:
-            uri_prefix: /games
-            upload_destination: '%kernel.project_dir%/public/games'
-            
+            uri_prefix: /uploads/games
+            upload_destination: '%kernel.project_dir%/public/uploads/games'
             inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
+
+        content_coverImage:
+            uri_prefix: /uploads/images
+            upload_destination: '%kernel.project_dir%/public/uploads/images'
+            namer: 
+                service: vich_uploader.namer_uniqid
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
+
+        content_image:
+            uri_prefix: /uploads/images
+            upload_destination: '%kernel.project_dir%/public/uploads/images'
+            namer: 
+                service: vich_uploader.namer_uniqid
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true               
