Mise en place des pages erreur optimisation des ressources et requete sql

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=false
 APP_SECRET=e5ed2884011dce1d2f1c88a3d9528745
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
