--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -20,6 +20,9 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            string_functions:
+                DATE_FORMAT: DoctrineExtensions\Query\Mysql\DateFormat      
         mappings:
             App:
                 is_bundle: false
