--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "beberlei/doctrineextensions": "^1.2",
         "cocur/slugify": "^3.2",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
+        "friendsofsymfony/rest-bundle": "^2.5",
         "fzaninotto/faker": "^1.8",
         "isometriks/spam-bundle": "^1.0",
+        "jms/serializer-bundle": "^2.4",
         "liip/imagine-bundle": "^2.1",
-        "sensio/framework-extra-bundle": "^5.1",
+        "sensio/framework-extra-bundle": "^5.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
