--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -14,6 +14,18 @@ liip_imagine:
                     # 4px larger to create a 2px border around the final image
                     background : { size : [360, 230], position : center, color : '#5ac0ec' }
             # the name of the "filter set"
+            thumbRec :
+                # adjust the image quality to 75%
+                quality : 75
+                # list of transformations to apply (the "filters")
+                filters :
+                    # create a thumbnail: set size to 120x90 and use the "outbound" mode
+                    # to crop the image when the size ratio of the input differs
+                    thumbnail  : { size : [360, 230], mode : outbound }
+                    # create a 2px black border: center the thumbnail on a black background
+                    # 4px larger to create a 2px border around the final image
+                    background : { size : [360, 230], position : center, color : '#f8f9fc' }                    
+            # the name of the "filter set"
             carousel :
                 # adjust the image quality to 75%
                 quality : 75
