--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,6 @@ services:
             $targetDir: '%kernel.project_dir%/web/'                 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    sensio_framework_extra.view.listener:
+        alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
