--- a/.env
+++ b/.env
@@ -31,5 +31,6 @@ DATABASE_URL=mysql://root:12345678@127.0.0.1:3306/urps
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://mahdjoub.m@gmail.com:19091989Sam@localhost
+# MAILER_URL=gmail://mahdjoub.m@gmail.com:19091989Sam@localhost
+MAILER_URL=smtp://localhost:25?encryption=ssl&auth_mode=login&username=root&password=pfmXr4DDh1iv
 ###< symfony/swiftmailer-bundle ###
