correction envoie mail

--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root:12345678@127.0.0.1:3306/urps
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://service@plateforme-etp-urps-ml-paca.fr:123456789@ssl0.ovh.net:465?encryption=ssl&auth_mode=login
+MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
