--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.2",
         "cocur/slugify": "^3.2",
+        "dompdf/dompdf": "^0.8.3",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "friendsofsymfony/rest-bundle": "^2.5",
         "fzaninotto/faker": "^1.8",
